[gd_scene load_steps=2 format=3 uid="uid://sxnjw3u36k1i"]

[ext_resource type="Script" path="res://objects/Enemies/stationary.gd" id="1_ppnpa"]

[node name="Stationary" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_ppnpa")

[node name="Hitbox" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]

[node name="AnimationTimer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
